--- a/asstes/scss/_header_footer.scss
+++ b/asstes/scss/_header_footer.scss
@@ -165,6 +165,7 @@
         width: 50%;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         .footerItem {
           a {
             i {
@@ -193,6 +194,59 @@
               }
             }
           }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 882px) {
+  .header {
+    width: 100%;
+    .container {
+      .headerContent {
+        .logo {
+          .rightside {
+            display: none;
+          }
+        }
+        .navBar {
+          .navList {
+            .navItem:nth-child(1) {
+              display: none;
+            }
+            .navItem:nth-child(2) {
+              display: none;
+            }
+            .navItem:nth-child(3) {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .footer {
+    width: 100%;
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      .footerTop {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        .footerRight{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            .footerItem:nth-child(3){
+                display: none;
+            }
         }
       }
     }
