--- a/asstes/scss/_index.scss
+++ b/asstes/scss/_index.scss
@@ -1,5 +1,3 @@
-
-
 // Start home section
 
 .home {
@@ -10,22 +8,21 @@
     position: relative;
     .videoContent {
       width: 100%;
-      height: 800px;
+      height: 100vh;
       video {
         width: 100%;
-        height: 100%;
+        height: 100vh;
         object-fit: cover;
       }
     }
     .homeContent {
       width: 50%;
       position: absolute;
-      left: 5%;
-      bottom: 20%;
+      left: 56px;
+      bottom: 10%;
       display: flex;
       flex-direction: column;
       gap: 20px;
-      padding: 20px;
       background-color: transparent;
       color: #fff;
       .mainHeader {
@@ -116,11 +113,11 @@
   width: 100%;
   background-color: #fff;
   .container {
-    width: 90%;
-    margin: 0 auto;
     .numAnimation {
       width: 60%;
       display: flex;
+      flex-wrap: wrap;
+      gap: 24px;
       justify-content: space-between;
       .circle {
         display: flex;
@@ -274,11 +271,11 @@
     .prodCardBox {
       width: 100%;
       display: flex;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      flex-wrap: wrap;
       justify-content: center;
       gap: 16px;
       .productCard {
+        width: 32%;
         background-color: #fff;
         border-radius: 16px;
         padding: 5px;
@@ -328,11 +325,12 @@
 
 // End ourPartners section
 
-@media (max-width: 992px) {
+@media (max-width: 937px) {
   .home {
     .homeContainer {
       width: 100%;
       .homeContent {
+        width: 80%;
         .mainHeader {
           font-size: 38px;
         }
@@ -344,6 +342,449 @@
           .btn {
             a {
               padding: 12px 24px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .intoCountry {
+    padding-top: 56px;
+    .container {
+      .intoCountryContent {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 24px;
+        .intoText {
+          color: #1e1e1e;
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 150%;
+          .special {
+            color: #1e1e1e;
+            font-family: "Playfair Display";
+            font-size: 24px;
+            font-style: italic;
+            font-weight: 500;
+            line-height: 150%;
+          }
+        }
+        .companyText {
+          color: #1e1e1e;
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 150%;
+        }
+      }
+    }
+  }
+
+  .numbers {
+    padding: 56px 0 96px 0;
+    width: 100%;
+    background-color: #fff;
+    .container {
+      .numAnimation {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        .circle {
+          display: flex;
+          flex-direction: column;
+          .num {
+            color: #1e1e1e;
+            font-size: 48px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 100%;
+          }
+          .plus {
+            color: #1e1e1e;
+            font-size: 48px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 100%;
+          }
+          .numInfo {
+            color: #2a2a2a;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 100%;
+          }
+        }
+      }
+      .partnersCover {
+        width: 100%;
+        margin-top: 96px;
+        img {
+          width: 100%;
+          object-fit: cover;
+          border-radius: 30px;
+        }
+      }
+    }
+  }
+
+  .products {
+    width: 100%;
+    padding: 96px 0;
+    background-color: #fdfaf6;
+    .container {
+      .productsContent {
+        .produtcsTitle {
+          color: #1e1e1e;
+          font-size: 40px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 100%;
+          margin-bottom: 40px;
+        }
+      }
+      .prodCardBox {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 16px;
+        .productCard {
+          width: 45%;
+          background-color: #fff;
+          border-radius: 16px;
+          padding: 5px;
+          .prodCardItem {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+          }
+          .productImage {
+            width: 100%;
+            img {
+              width: 100%;
+              object-fit: cover;
+            }
+          }
+          .productDisc {
+            display: flex;
+            flex-direction: column;
+            padding: 0 24px;
+            gap: 16px;
+            background-color: #fff;
+            .productTitle {
+              width: 100%;
+              color: #000;
+              font-size: 24px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 100%;
+              text-align: left;
+            }
+            .productInfo {
+              color: #000;
+              font-family: "Work Sans";
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 150%;
+              letter-spacing: -0.14px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .home {
+    .homeContainer {
+      width: 100%;
+      .videoContent {
+        width: 100%;
+        height: 80vh;
+        video {
+          width: 100%;
+          height: 80vh;
+        }
+      }
+      .homeContent {
+        width: 100%;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        padding: 56px 20px;
+        .mainHeader {
+          color: #fff;
+          font-size: 28px;
+          font-style: normal;
+          font-weight: 587;
+          line-height: 100%;
+        }
+        .homeInfo {
+          width: 100%;
+          color: #fff;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 493;
+          line-height: 150%;
+        }
+        .homeButtons {
+          width: 100%;
+          display: flex;
+          gap: 8px;
+          .btn {
+            width: 50%;
+            a {
+              padding: 16px 44px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .intoCountry {
+    padding-top: 56px;
+    .container {
+      .intoCountryContent {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 24px;
+        .intoText {
+          color: #1e1e1e;
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 150%;
+          .special {
+            color: #1e1e1e;
+            font-family: "Playfair Display";
+            font-size: 24px;
+            font-style: italic;
+            font-weight: 500;
+            line-height: 150%;
+          }
+        }
+        .companyText {
+          color: #1e1e1e;
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 150%;
+        }
+      }
+    }
+  }
+
+  .partners {
+    width: 100%;
+    .container {
+      .partnersContent {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        .partnersInfo {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          gap: 24px;
+          .partnersTitle {
+            color: #1e1e1e;
+            font-size: 32px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 125%;
+          }
+          .partnersText {
+            color: #2a2a2a;
+            width: 100%;
+            font-family: "Work Sans";
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%;
+            letter-spacing: -0.2px;
+          }
+        }
+      }
+    }
+  }
+
+  .ourPartners {
+    width: 100%;
+    .ourPartnersGrid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      .partnersInfo {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 16px;
+        background-color: #fc3d40;
+        padding: 56px 20px;
+        .partnersHeader {
+          color: #fff;
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 125%;
+        }
+        .partnersText {
+          color: rgba(255, 255, 255, 0.95);
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 150%; /* 24px */
+        }
+        .partnersBtn {
+          display: flex;
+          padding: 20px 48px;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+          margin-top: 0;
+
+          a {
+            color: #000;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 100%;
+          }
+        }
+      }
+      .partnerWallpaper {
+        width: 100%;
+          height: 50vh;
+        img {
+          width: 100%;
+          height: 50vh;
+        }
+      }
+    }
+  }
+
+  .numbers {
+    padding: 56px 0;
+    width: 100%;
+    background-color: #fff;
+    .container {
+      .numAnimation {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        .circle {
+          display: flex;
+          flex-direction: column;
+          .num {
+            color: #1e1e1e;
+            font-size: 48px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 100%;
+          }
+          .plus {
+            color: #1e1e1e;
+            font-size: 48px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 100%;
+          }
+          .numInfo {
+            color: #2a2a2a;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 100%;
+          }
+        }
+      }
+      .partnersCover {
+        width: 100%;
+        height: 50vh;
+        margin-top: 56px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 30px;
+        }
+      }
+    }
+  }
+  .products {
+    width: 100%;
+    padding: 96px 0;
+    background-color: #fdfaf6;
+    .container {
+      .productsContent {
+        .produtcsTitle {
+          color: #1e1e1e;
+          font-size: 40px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 100%;
+          margin-bottom: 40px;
+        }
+      }
+      .prodCardBox {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 16px;
+        .productCard {
+          width: 100%;
+          background-color: #fff;
+          border-radius: 16px;
+          padding: 5px;
+          .prodCardItem {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+          }
+          .productImage {
+            width: 100%;
+            img {
+              width: 100%;
+              object-fit: cover;
+            }
+          }
+          .productDisc {
+            display: flex;
+            flex-direction: column;
+            padding: 0 24px;
+            gap: 16px;
+            background-color: #fff;
+            .productTitle {
+              width: 100%;
+              color: #000;
+              font-size: 24px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 100%;
+              text-align: left;
+            }
+            .productInfo {
+              color: #000;
+              font-family: "Work Sans";
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 150%;
+              letter-spacing: -0.14px;
             }
           }
         }
