--- a/asstes/scss/_index.scss
+++ b/asstes/scss/_index.scss
@@ -113,6 +113,7 @@
   width: 100%;
   background-color: #fff;
   .container {
+    
     .numAnimation {
       width: 60%;
       display: flex;
@@ -141,13 +142,22 @@
         }
       }
     }
-    .partnersCover {
+    .slider {
       width: 100%;
-      margin-top: 96px;
-      img {
-        width: 100%;
-        object-fit: cover;
-        border-radius: 30px;
+      .swiper{
+        
+        .swiper-wrapper{
+          
+          margin-top: 56px;
+          .partnersSlide  {
+            img{
+              width: 100% ;
+              height: 100%;
+             object-fit: cover;
+  
+            }
+          }
+        }
       }
     }
   }
@@ -253,75 +263,6 @@
   }
 }
 
-.products {
-  width: 100%;
-  padding: 96px 0;
-  background-color: #fdfaf6;
-  .container {
-    .productsContent {
-      .produtcsTitle {
-        color: #1e1e1e;
-        font-size: 40px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 100%;
-        margin-bottom: 40px;
-      }
-    }
-    .prodCardBox {
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 16px;
-      .productCard {
-        width: 32%;
-        background-color: #fff;
-        border-radius: 16px;
-        padding: 5px;
-        .prodCardItem {
-          width: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-direction: column;
-        }
-        .productImage {
-          width: 100%;
-          img {
-            width: 100%;
-            object-fit: cover;
-          }
-        }
-        .productDisc {
-          display: flex;
-          flex-direction: column;
-          padding: 0 24px;
-          gap: 16px;
-          background-color: #fff;
-          .productTitle {
-            width: 100%;
-            color: #000;
-            font-size: 24px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 100%;
-            text-align: left;
-          }
-          .productInfo {
-            color: #000;
-            font-family: "Work Sans";
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 150%;
-            letter-spacing: -0.14px;
-          }
-        }
-      }
-    }
-  }
-}
 
 // End ourPartners section
 
@@ -430,75 +371,7 @@
     }
   }
 
-  .products {
-    width: 100%;
-    padding: 96px 0;
-    background-color: #fdfaf6;
-    .container {
-      .productsContent {
-        .produtcsTitle {
-          color: #1e1e1e;
-          font-size: 40px;
-          font-style: normal;
-          font-weight: 600;
-          line-height: 100%;
-          margin-bottom: 40px;
-        }
-      }
-      .prodCardBox {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 16px;
-        .productCard {
-          width: 45%;
-          background-color: #fff;
-          border-radius: 16px;
-          padding: 5px;
-          .prodCardItem {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-          }
-          .productImage {
-            width: 100%;
-            img {
-              width: 100%;
-              object-fit: cover;
-            }
-          }
-          .productDisc {
-            display: flex;
-            flex-direction: column;
-            padding: 0 24px;
-            gap: 16px;
-            background-color: #fff;
-            .productTitle {
-              width: 100%;
-              color: #000;
-              font-size: 24px;
-              font-style: normal;
-              font-weight: 500;
-              line-height: 100%;
-              text-align: left;
-            }
-            .productInfo {
-              color: #000;
-              font-family: "Work Sans";
-              font-size: 14px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 150%;
-              letter-spacing: -0.14px;
-            }
-          }
-        }
-      }
-    }
-  }
+  
 }
 
 @media (max-width: 480px) {
@@ -665,7 +538,6 @@
       }
       .partnerWallpaper {
         width: 100%;
-          height: 50vh;
         img {
           width: 100%;
           height: 50vh;
@@ -722,75 +594,7 @@
       }
     }
   }
-  .products {
-    width: 100%;
-    padding: 96px 0;
-    background-color: #fdfaf6;
-    .container {
-      .productsContent {
-        .produtcsTitle {
-          color: #1e1e1e;
-          font-size: 40px;
-          font-style: normal;
-          font-weight: 600;
-          line-height: 100%;
-          margin-bottom: 40px;
-        }
-      }
-      .prodCardBox {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 16px;
-        .productCard {
-          width: 100%;
-          background-color: #fff;
-          border-radius: 16px;
-          padding: 5px;
-          .prodCardItem {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-          }
-          .productImage {
-            width: 100%;
-            img {
-              width: 100%;
-              object-fit: cover;
-            }
-          }
-          .productDisc {
-            display: flex;
-            flex-direction: column;
-            padding: 0 24px;
-            gap: 16px;
-            background-color: #fff;
-            .productTitle {
-              width: 100%;
-              color: #000;
-              font-size: 24px;
-              font-style: normal;
-              font-weight: 500;
-              line-height: 100%;
-              text-align: left;
-            }
-            .productInfo {
-              color: #000;
-              font-family: "Work Sans";
-              font-size: 14px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 150%;
-              letter-spacing: -0.14px;
-            }
-          }
-        }
-      }
-    }
-  }
+  
 }
 
 @media (max-width: 890px) {
