--- a/asstes/scss/_header_footer.scss
+++ b/asstes/scss/_header_footer.scss
@@ -3,8 +3,9 @@
   width: 100%;
   position: fixed;
   background-color: transparent;
-  padding: 32px 0;
-  z-index: 1100;
+
+  z-index: 100;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.12);
   .container {
     .headerContent {
       width: 100%;
@@ -15,6 +16,7 @@
         display: flex;
         align-items: center;
         gap: 32px;
+
         .rightside {
           display: flex;
           align-items: center;
@@ -26,12 +28,19 @@
       }
     }
     .navBar {
+      padding: 32px 0;
+      padding-left: 30px;
+      border-left: 1px solid rgba(255, 255, 255, 0.12);
       .navList {
         display: flex;
         align-items: center;
         gap: 30px;
         .navItem {
           a {
+            color: #fff;
+            font-size: 16px;
+          }
+          button {
             color: #fff;
             font-size: 16px;
           }
@@ -75,25 +84,26 @@
           border-radius: 20px;
           display: inline-block;
           position: relative;
-          a {
+          button {
             position: relative;
             display: flex;
             align-items: center;
             padding: 6px 24px;
             color: #fff;
-            text-decoration: none;
-            transition: 0.5s ease; // Sol boşluk (margin-left) transition efekti.
+            background-color: transparent;
+            border: none;
+            transition: 0.5s ease;
             img {
               margin-left: 10px;
               transition: 0.5s ease;
             }
             &:before {
-              content: "\2190"; // Sol ok simgesi (Unicode).
+              content: "\2190";
               position: absolute;
-              left: 10px; // Sol okun içeriye doğru kayması.
+              left: 10px;
               opacity: 0;
               font-size: 18px;
-              transition: opacity 0.5s ease; // Opacity transition efekti.
+              transition: opacity 0.5s ease;
             }
 
             &:hover {
@@ -127,13 +137,14 @@
 
 .footer {
   width: 100%;
-  padding: 96px 0 64px 0;
+  padding: 96px 0 0 0;
   background-color: #222;
   .container {
     .footerTop {
       width: 100%;
       display: flex;
       flex-wrap: wrap;
+      padding-bottom: 56px;
       .footerLeft {
         width: 50%;
         display: flex;
@@ -197,6 +208,23 @@
         }
       }
     }
+    .footerBottom {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding: 32px 0;
+      border-top: 2px solid white;
+      .footerItem {
+        a {
+          color: #fff;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          letter-spacing: -0.14px;
+        }
+      }
+    }
   }
 }
 
@@ -240,14 +268,20 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-        .footerRight{
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            .footerItem:nth-child(3){
-                display: none;
-            }
+        .footerRight {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          .footerItem:nth-child(3) {
+            display: none;
+          }
         }
+      }
+      .footerBottom{
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        align-items: flex-start;
       }
     }
   }
